--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -93,6 +93,7 @@
     <string name="backup_local_summary">备份笔记到存储卡/SNote/notes.txt</string>
     <string name="backup_local">备份到本地</string>
     <string name="backup_local_done">备份完成</string>
+    <string name="backup_local_fail">备份失败</string>
     <string name="just_now">刚刚</string>
     <string name="before_half_hour">半个小时之前</string>
 </resources>
